# ai-dlc

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ADOPTING.md  AGENTS.md  BLOCKED.md  CLAUDE.md  MEMORY.md  Makefile  README.md  pyproject.toml
agents/architect/: Dockerfile  pyproject.toml
agents/architect/src/architect/: __init__.py  agent.py  app.py  hooks.py  plan.py  prompts.py  repo_grounding.py  spec.py  tools.py
agents/architect/tests/: test_agent.py  test_app_async.py  test_app_emit.py  test_app_run.py  test_hooks.py  test_plan.py  test_repo_grounding.py  test_spec.py
agents/code_critic/: Dockerfile  pyproject.toml
agents/code_critic/src/code_critic/: __init__.py  agent.py  app.py  critique.py  hooks.py  prompts.py  tools.py
agents/code_critic/tests/: test_app_async.py  test_app_run.py  test_critique.py
agents/critic/: Dockerfile  pyproject.toml
agents/critic/src/critic/: __init__.py  agent.py  app.py  critique.py  hooks.py  prompts.py  tools.py
agents/critic/src/critic/templates/: critique.md.j2
agents/critic/tests/: test_app_emit.py  test_app_run.py  test_critique.py  test_hooks.py
agents/implementer/: Dockerfile  pyproject.toml
agents/implementer/src/implementer/: __init__.py  agentcore_auth.py  app.py  client.py  finish.py  gate_commands.py  gates.py  hooks.py  lint_gate.py  options.py  prompts.py  quality_gate.py  repo_ops.py  tasks.py
agents/implementer/tests/: test_app_async.py  test_client.py  test_finish.py  test_gate_commands.py  test_gates.py  test_hooks.py  test_iteration.py  test_lint_gate.py  test_pr_body.py  test_quality_gate.py  test_repo_ops.py  test_tasks.py  test_usage.py
agents/proposer/: Dockerfile  pyproject.toml
agents/proposer/src/proposer/: __init__.py  agent.py  app.py  hooks.py  prompts.py  proposal.py  tools.py
agents/proposer/tests/: test_app_async.py  test_app_run.py  test_browse_url.py  test_hooks.py  test_proposal.py  test_research_agent.py  test_research_app.py  test_retry.py
agents/tester/: Dockerfile  pyproject.toml
agents/tester/src/tester/: __init__.py  agent.py  app.py  hooks.py  prompts.py  report.py  tools.py
agents/tester/tests/: test_app_async.py  test_app_run.py  test_hooks.py  test_publish.py  test_report.py
agents/triage/: Dockerfile  pyproject.toml
agents/triage/src/triage/: __init__.py  agent.py  app.py  decision.py  prompts.py  tools.py
agents/triage/tests/: test_agent.py  test_app_emit.py
lambdas/artifact_tool/: pyproject.toml
lambdas/artifact_tool/src/artifact_tool/: __init__.py  handler.py
lambdas/artifact_tool/tests/: test_artifact_handler.py
lambdas/comment_classifier/: pyproject.toml
lambdas/comment_classifier/src/comment_classifier/: __init__.py  handler.py  prompts.py
lambdas/comment_classifier/tests/: test_handler.py
lambdas/entry_adapter/: pyproject.toml  requirements.txt
lambdas/entry_adapter/src/entry_adapter/: __init__.py  handler.py
lambdas/entry_adapter/tests/: conftest.py  test_entry_handler.py
lambdas/eval_runner/: pyproject.toml  requirements.txt
lambdas/eval_runner/src/eval_runner/: __init__.py  handler.py
lambdas/eval_runner/tests/: test_eval_runner.py
lambdas/event_projector/: pyproject.toml  requirements.txt
lambdas/event_projector/src/event_projector/: __init__.py  handler.py
lambdas/event_projector/tests/: test_projector_handler.py
lambdas/few_shot_miner/: pyproject.toml
lambdas/few_shot_miner/src/few_shot_miner/: __init__.py  handler.py
lambdas/few_shot_miner/tests/: test_miner_handler.py
lambdas/hitl_handler/: pyproject.toml  requirements.txt
lambdas/hitl_handler/src/hitl_handler/: __init__.py  handler.py
lambdas/hitl_handler/tests/: test_hitl_handler.py
lambdas/iteration_reactor/: pyproject.toml
lambdas/iteration_reactor/src/iteration_reactor/: __init__.py  handler.py
lambdas/iteration_reactor/tests/: test_handler.py
lambdas/lint_gate/: pyproject.toml
lambdas/lint_gate/src/lint_gate/: __init__.py  handler.py
lambdas/lint_gate/tests/: test_handler.py
lambdas/pr_telemetry/: pyproject.toml
lambdas/pr_telemetry/src/pr_telemetry/: __init__.py  handler.py
lambdas/pr_telemetry/tests/: test_handler.py
lambdas/repo_helper/: pyproject.toml  requirements.txt
lambdas/repo_helper/src/repo_helper/: __init__.py  auth.py  handler.py
lambdas/repo_helper/tests/: test_repo_handler.py
lambdas/retrospector_dispatcher/: pyproject.toml
lambdas/retrospector_dispatcher/src/retrospector_dispatcher/: __init__.py  handler.py
lambdas/retrospector_dispatcher/tests/: test_handler.py
lambdas/runtime_invoker/: pyproject.toml  requirements.txt
lambdas/runtime_invoker/src/runtime_invoker/: __init__.py  handler.py
lambdas/runtime_invoker/tests/: test_handler.py
lambdas/state_router/: pyproject.toml
lambdas/state_router/src/state_router/: __init__.py  actions.py  aws.py  circuit_breaker.py  config.py  decide.py  dispatch.py  dispatch_run.py  dispatch_task.py  execute.py  extract.py  handler.py  model.py  payload.py  synthetic_spec.py
lambdas/state_router/tests/: conftest.py  test_circuit_breaker.py  test_decide.py  test_dispatch.py  test_dispatch_contract.py  test_executor.py  test_handler_batch.py  test_model.py
lambdas/telemetry/: pyproject.toml  requirements.txt
lambdas/telemetry/src/telemetry/: __init__.py  handler.py
lambdas/telemetry/tests/: test_telemetry_handler.py
lambdas/triage_dispatcher/: pyproject.toml  requirements.txt
lambdas/triage_dispatcher/src/triage_dispatcher/: __init__.py  bedrock.py  handler.py  models.py  prompts.py  synthesize.py
lambdas/triage_dispatcher/tests/: test_handler.py  test_synthesize.py
services/dashboard/: Dockerfile  pyproject.toml  requirements.txt
services/dashboard/scripts/: build-tailwind.sh
services/dashboard/src/dashboard/: __init__.py  app.py  artifacts.py  auth.py  deps.py  github_repos.py  models.py  repos.py  shutdown_signal.py  state_progress.py
services/dashboard/tests/: conftest.py  test_artifacts.py  test_events.py  test_healthz.py  test_run_detail.py  test_runs_delete.py  test_shutdown_signal.py  test_state_progress.py  test_webhooks.py
(+275 files in other folders)
