[project]
name = "ai-dlc"
version = "0.0.0"
description = "AI Development Lifecycle — agentic SDLC pipeline on AWS Bedrock AgentCore."
requires-python = ">=3.14,<3.15"

[tool.uv]
required-version = ">=0.11"

[tool.uv.workspace]
members = ["packages/*", "agents/*", "lambdas/*", "services/*"]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "ty==0.0.34",
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-mock>=3.14",
    "moto[all]>=5.1",
    "pip-audit>=2.10",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["packages", "agents", "lambdas", "services", "tests"]
extend-exclude = ["**/.venv", "**/dist", "**/build"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "ANN",              # annotations
    "N",                # naming
    "D",                # pydocstyle
    "C90",              # mccabe complexity
    "RUF",              # ruff-specific
    "S",                # bandit
    "PL",               # pylint
    "TID",              # tidy imports
    "PTH",              # use pathlib
    "ASYNC", "LOG", "G", "T20", "TRY", "ERA",
]
ignore = [
    "D203",             # blank-line-before-class (conflicts with D211)
    "D213",             # multi-line-summary-second-line (conflicts with D212)
    "ANN401",           # allow Any in narrow cases
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 5
max-positional-args = 5

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]                   # asserts and missing docstrings allowed in tests
"**/tests/**" = ["S101", "D"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
possibly-unresolved-reference = "error"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
unresolved-import = "error"
invalid-type-form = "error"
unused-ignore-comment = "error"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
markers = [
    "integration: cross-package integration tests (moto-backed)",
    "eval: agent evaluation cases (live AWS, gated)",
    "live_aws: tests that hit a real AWS account",
]
testpaths = ["tests", "packages", "agents", "lambdas", "services"]
asyncio_mode = "auto"
