[project]
name = "ai-dlc"
version = "0.0.0"
description = "AI Development Lifecycle — agentic SDLC pipeline on AWS Bedrock AgentCore."
requires-python = ">=3.14,<3.15"

[tool.uv]
required-version = ">=0.11"

[tool.uv.workspace]
members = ["packages/*", "agents/*", "lambdas/*", "services/*"]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "ty==0.0.34",
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-mock>=3.14",
    "moto[all]>=5.1",
    "pip-audit>=2.10",
    "boto3-stubs[bedrock-agentcore,cloudwatch,dynamodb,events,lambda,s3,secretsmanager,sns,sqs,stepfunctions]==1.43.2",
]

[tool.ruff]
line-length = 100
# The lambdas deploy on AWS Lambda's ``python3.14`` runtime.
target-version = "py314"
src = ["packages", "agents", "lambdas", "services", "tests"]
extend-exclude = ["**/.venv", "**/dist", "**/build"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "SIM",              # simplify
    "ANN",              # annotations
    "N",                # naming
    "D",                # pydocstyle
    "C90",              # mccabe complexity
    "RUF",              # ruff-specific
    "S",                # bandit
    "PL",               # pylint
    "TID",              # tidy imports
    "PTH",              # use pathlib
    "ASYNC", "LOG", "G", "T20", "TRY", "ERA",
]
ignore = [
    "D203",             # blank-line-before-class (conflicts with D211)
    "D213",             # multi-line-summary-second-line (conflicts with D212)
    "ANN401",           # allow Any in narrow cases
    "TRY003",           # we pass short messages with structured context kwargs to typed errors
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 8
max-positional-args = 5

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["common", "architect", "code_critic", "implementer", "reviewer", "tester", "proposer", "retrospector", "triage", "dashboard", "state_router", "retrospector_dispatcher"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "PLR2004"]        # asserts, missing docstrings, magic-number comparisons in tests
"**/tests/**" = ["S101", "D", "PLR2004"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
possibly-unresolved-reference = "error"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
unresolved-import = "error"
invalid-type-form = "error"
unused-ignore-comment = "error"

[tool.pytest.ini_options]
# importlib import mode keeps same-named test modules (e.g. test_hooks.py in
# multiple agents) from colliding under pytest's default rootdir-based naming.
addopts = "-q --strict-markers --strict-config --import-mode=importlib"
markers = [
    "integration: cross-package integration tests (moto-backed)",
    "eval: agent evaluation cases (live AWS, gated)",
    "live_aws: tests that hit a real AWS account",
]
testpaths = ["tests", "packages", "agents", "lambdas", "services"]
asyncio_mode = "auto"
