[project]
name = "implementer"
version = "0.0.0"
description = "ai-dlc Implementer agent — works the tasks list one PR at a time."
requires-python = ">=3.14,<3.15"
dependencies = [
    "bedrock-agentcore==1.8.0",
    "boto3==1.43.2",
    "claude-agent-sdk==0.1.72",
    "common",
    "httpx==0.28.1",
    "pydantic==2.13.3",
    "structlog==25.5.0",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
