[project]
name = "artifact-tool"
version = "0.0.0"
description = "AgentCore Gateway tool Lambda for S3 + MEMORY.md operations."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools==3.29.0",
    "boto3==1.43.2",
    "botocore==1.43.2",
    "pydantic==2.13.3",
]

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
