[project]
name = "event-projector"
version = "0.0.0"
description = "EventBridge + DynamoDB Streams projector — updates the runs read-model and AgentCore Memory."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools==3.29.0",
    "bedrock-agentcore==1.9.0",
    "boto3==1.43.2",
    "botocore==1.43.2",
    "common",
    "pydantic==2.13.3",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
