[project]
name = "repo-helper"
version = "0.0.0"
description = "AgentCore Gateway tool Lambda for git/GitHub operations."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools==3.28.0",
    "boto3==1.43.2",
    "botocore==1.43.2",
    "httpx==0.28.1",
    "pydantic==2.13.3",
]

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
