[project]
name = "retrospector_dispatcher"
version = "0.0.0"
description = "EventBridge-driven dispatcher that fires the Retrospector AgentCore Runtime on every terminal event."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools[tracer]==3.29.0",
    "boto3==1.43.6",
    "common",
    "pydantic==2.13.4",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
