[project]
name = "runtime-invoker"
version = "0.0.0"
description = "Step Functions shim Lambda — kicks off long-running AgentCore Runtime invocations and lets the runtime call back via SendTaskSuccess."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools==3.29.0",
    "boto3==1.43.2",
    "botocore==1.43.2",
    "common",
    "pydantic==2.13.3",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
