[project]
name = "state-router"
version = "0.0.0"
description = "SQS beacon → DDB state read → action dispatch for the ai-dlc SDLC pipeline."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools[tracer]==3.29.0",
    "boto3==1.43.6",
    "botocore==1.43.6",
    "common",
    "pydantic==2.13.4",
    "uuid-utils==0.14.1",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
