[project]
name = "telemetry"
version = "0.0.0"
description = "Categorize SDLC pipeline rejection reasons via Bedrock Haiku 4.5 and persist labeled records."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools[tracer]==3.29.0",
    "boto3==1.43.6",
    "botocore==1.43.6",
    "common",
    "pydantic==2.13.4",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
