[project]
name = "triage-dispatcher"
version = "0.0.0"
description = "Triage GitHub issues with Bedrock and either start a run, defer, or decline."
requires-python = ">=3.13,<3.15"
dependencies = [
    "aws-lambda-powertools==3.29.0",
    "boto3==1.43.2",
    "botocore==1.43.2",
    "common",
    "pydantic==2.13.3",
    "uuid-utils==0.14.1",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
