[project]
name = "dashboard"
version = "0.0.0"
description = "ai-dlc dashboard — FastAPI + Jinja2 + Alpine.js for run submission and pipeline tracking."
requires-python = ">=3.14,<3.15"
dependencies = [
    "boto3==1.43.2",
    "common",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "pydantic==2.13.3",
    "pyjwt[crypto]==2.12.1",
    "python-multipart==0.0.27",
    "sse-starlette==3.4.1",
    "structlog==25.5.0",
    "uvicorn[standard]==0.46.0",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
