[project]
name = "dashboard"
version = "0.0.0"
description = "ai-dlc dashboard — FastAPI + Jinja2 + Alpine.js for run submission and pipeline tracking."
requires-python = ">=3.14,<3.15"
dependencies = [
    "authlib==1.7.2",
    "aws-lambda-powertools[tracer]==3.29.0",
    "boto3==1.43.6",
    "common",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mangum==0.21.0",
    "markdown-it-py==4.0.0",
    "pydantic==2.13.4",
    "pyjwt[crypto]==2.12.1",
    "python-multipart==0.0.27",
    "structlog==25.5.0",
    "uvicorn[standard]==0.46.0",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["uv_build>=0.11"]
build-backend = "uv_build"
